--- a/configuration.org
+++ b/configuration.org
@@ -479,17 +479,17 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
     (set-face-attribute 'org-level-5 nil :height 1.1))
   #+END_SRC
 
-  This take org-mode bullet lists one step farther. It renders
+  This takes org-mode bullet lists one step farther. It renders
   indentation level bullet headers so they look like a single bullet
   at the correct indentation level. The '*' characters are still
   there, but hidden through the magic of colors.
 
   #+BEGIN_SRC emacs-lisp
-  (use-package org-bullets
-    :ensure t
-    :commands (org-bullets-mode)
-    :init
-    (add-hook 'org-mode-hook 'org-bullets-mode))
+    (use-package org-bullets
+      :ensure t
+      :commands (org-bullets-mode)
+      :init
+      (add-hook 'org-mode-hook 'org-bullets-mode))
   #+END_SRC
 
 
