--- a/configuration.org
+++ b/configuration.org
@@ -51,7 +51,7 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
   #+BEGIN_SRC emacs-lisp
     (use-package exec-path-from-shell
-      :if (memq window-system '(mac ns))
+      :if (memq window-system '(mac ns x))
       :ensure t
       :config
       (exec-path-from-shell-initialize))
