--- a/configuration.org
+++ b/configuration.org
@@ -349,11 +349,13 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       :diminish flyspell-mode
       :commands (flyspell-prog-mode flyspell-mode)
       :init
-      (setq ispell-program-name "/usr/local/bin/ispell")
+      (if (string-equal system-type "darwin") (setq ispell-program-name "/usr/local/bin/ispell"))
       (add-hook 'ruby-mode-hook 'flyspell-prog-mode)
       (add-hook 'markdown-mode-hook 'flyspell-mode)
       (add-hook 'org-mode-hook 'flyspell-mode)
       (add-hook 'text-mode-hook 'flyspell-mode))
+
+
   #+END_SRC
 
 
